Fixes small typo in footer and adds colors for <a> tags

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 5 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
 
-			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. Look under the contact us tab to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
+			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. <a href="#contact">Contact us</a> to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
 
 			<p class="section__action"><a class="button button--variant" href="#contact">Schedule a Visit</a></p>
 		</div>
@@ -73,7 +73,7 @@
 
 	<footer class="site-footer">
 		<div class="container">
-			<p>&copy; 2015 Truth &amp; Light Montessori</p>
+			<p>&copy; 2015 Light &amp; Truth Montessori</p>
 		</div>
 	</footer>
 </body>
