Adds new logo and completes the Schedule a Visit/Contact section

--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
 </head>
 <body>
 	<header class="site-header">
-		<div class="container">
-			<h1 class="site-header__title logo"><span class="logo__light">Light</span> <span class="logo__amp">&amp;</span> <span class="logo__truth">Truth</span> <span class="logo__montessori">Montessori</span></h1>
+		<div class="container container--wide">
+			<h1 class="site-header__title"><img class="site-header__logo" src="/images/ltm_logo_white_flame.svg" alt="Logo" /></h1>
+			<!-- <h1 class="site-header__title logo"><span class="logo__light">Light</span> <span class="logo__amp">&amp;</span> <span class="logo__truth">Truth</span> <span class="logo__montessori">Montessori</span></h1> -->
+
+			<p class="site-header__phone large-hide">(801) 787-1719</p>
 
 			<nav class="site-nav">
 				<a class="site-nav__item" href="#about">About</a>
 				<a class="site-nav__item" href="#philosophy">Philosophy</a>
-				<a class="site-nav__item" href="#contact">Contact</a>
+				<a class="site-nav__item" href="#visit">Visit</a>
+				<span class="site-nav__item site-nav__item--phone mobile-hide">(801) 787-1719</span>
 			</nav>
 		</div>
 	</header>
 
-	<section class="section section--hero section--background">
+	<section class="section section--hero section--centered section--background">
 		<div class="container">
 			<h1 class="section__title section__tile--hero">Give your child a love of lifelong learning.</h1>
 
-			<p class="serious">Serving Utah Valley since 2011, our beautiful classrooms allow children ages 3 to 5 to learn through the kind of exploration that comes naturally to them.</p>
+			<p class="serious">Serving Utah Valley since 2011, our beautiful classrooms allow children ages 3 to 5 to learn through natural and self-motivated exploration.</p>
 
-			<p class="section__action"><a class="button" href="#contact">Schedule a Visit</a></p>
+			<p class="section__action"><a class="button" href="#visit">Schedule a Visit</a></p>
 		</div>
 	</section>
 
@@ -38,9 +42,9 @@
 
 			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 5 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
 
-			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. <a href="#contact">Contact us</a> to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
+			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. <a href="#visit">Contact us</a> to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
 
-			<p class="section__action"><a class="button button--variant" href="#contact">Schedule a Visit</a></p>
+			<p class="section__action"><a class="button button--variant" href="#visit">Schedule a Visit</a></p>
 		</div>
 	</section>
 
@@ -61,13 +65,25 @@
 
 			<p>Given the freedom and support to question, to probe deeply, and to make connections, Montessori students become confident, enthusiastic, self-directed learners. They are able to think critically, work collaboratively, and act boldly—a skill set for the 21st century.</p>
 
-			<p class="section__action"><a class="button" href="#contact">Schedule a Visit</a></p>
+			<p class="section__action"><a class="button" href="#visit">Schedule a Visit</a></p>
 		</div>	
 	</section>
 
-	<section id="contact" class="section section--variant">
-		<div class="container">
-			<h1 class="section__title">Contact Us</h1>
+	<section id="visit" class="section section--variant section--centered">
+		<div class="container container--wide">
+			<h1 class="section__title">Schedule a Visit</h1>
+
+			<section class="section__piece">
+				<h2>Call Us</h2>
+				<p class="large">(801) 787-1719</p>
+				<p>Give us a call between 8 and 5 pm to learn more and schedule a visit.</p>
+			</section>
+
+			<section class="section__piece">
+				<h2>Email Us</h2>
+				<p><a class="button button--variant" href="">Send an Email</a></p>
+				<p>Click the button above to fill out a form and send us an email.</p>
+			</section>
 		</div>
 	</section>
 
