Adds a few content updates and links to new Wufoo form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<title>Light and Truth Montessori</title>
 
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="/js/site.js"></script>
 </head>
 <body>
 	<header class="site-header">
@@ -30,7 +33,7 @@
 		<div class="container">
 			<h1 class="section__title section__tile--hero">Give your child a love of lifelong learning.</h1>
 
-			<p class="serious">Serving Utah Valley since 2011, our beautiful classrooms allow children ages 3 to 5 to learn through natural and self-motivated exploration.</p>
+			<p class="serious">Our early childhood (ages 3 to 6) and lower elementary (ages 6 to 9) classes allow children to learn through <a href="#philosophy">natural and self-motivated exploration</a>.</p>
 
 			<p class="section__action"><a class="button" href="#visit">Schedule a Visit</a></p>
 		</div>
@@ -40,7 +43,7 @@
 		<div class="container">
 			<h1 class="section__title">About Us</h1>
 
-			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 5 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
+			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 6 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
 
 			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. <a href="#visit">Contact us</a> to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
 
@@ -81,7 +84,7 @@
 
 			<section class="section__piece">
 				<h2>Email Us</h2>
-				<p><a class="button button--variant" href="">Send an Email</a></p>
+				<p><a class="button button--variant" href="https://lightandtruthmontessori.wufoo.com/forms/light-truth-montessori-contact-us/">Send an Email</a></p>
 				<p>Click the button above to fill out a form and send us an email.</p>
 			</section>
 		</div>
