Adds address and Google Map to Visit section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>⁄
 	<script src="/js/site.js"></script>
 </head>
 <body>
@@ -76,16 +76,26 @@
 		<div class="container container--wide">
 			<h1 class="section__title">Schedule a Visit</h1>
 
-			<section class="section__piece">
+			<section class="section__piece section__piece--half">
 				<h2>Call Us</h2>
 				<p class="large">(801) 787-1719</p>
 				<p>Give us a call between 8 and 5 pm to learn more and schedule a visit.</p>
 			</section>
 
-			<section class="section__piece">
+			<section class="section__piece section__piece--half">
 				<h2>Email Us</h2>
 				<p><a class="button button--variant" href="https://lightandtruthmontessori.wufoo.com/forms/light-truth-montessori-contact-us/">Send an Email</a></p>
 				<p>Click the button above to fill out a form and send us an email.</p>
+			</section>
+
+			<section class="section__piece">
+				<h2>Our Address</h2>
+				<address>
+					<p>138 N. Main Street, Springville, Utah 84663</p>
+				</address>
+				<div class="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.809737323891!2d-111.6106066!3d40.168789700000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d9629bc1a457f%3A0x26fe844a304440e!2s138+N+Main+St%2C+Springville%2C+UT+84663!5e0!3m2!1sen!2sus!4v1440791808481" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
 			</section>
 		</div>
 	</section>
