Fixes small typo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>⁄
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="/js/site.js"></script>
 </head>
 <body>
