Adds new Downloads section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p class="site-header__phone large-hide">(801) 787-1719</p>
 
 			<nav class="site-nav">
-				<a class="site-nav__item" href="#about">About</a>
+				<a class="site-nav__item" href="#about">Classes</a>
 				<a class="site-nav__item" href="#philosophy">Philosophy</a>
 				<a class="site-nav__item" href="#visit">Visit</a>
 				<span class="site-nav__item site-nav__item--phone mobile-hide">(801) 787-1719</span>
@@ -41,13 +41,25 @@
 
 	<section id="about" class="section section--variant">
 		<div class="container">
-			<h1 class="section__title">About Us</h1>
+			<h1 class="section__title">Our Classes</h1>
+
+			<p class="standout centered">Classes are 5 days a week in the morning from 9–12 AM or afternoon from 12:30–3:30 PM.</p>
 
 			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 6 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
 
 			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. <a href="#visit">Contact us</a> to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
 
 			<p class="section__action"><a class="button button--variant" href="#visit">Schedule a Visit</a></p>
+		</div>
+	</section>
+
+	<section class="action-bar">
+		<div class="container">
+			<h2 class="hidden">Downloads</h2>
+			<ul class="choices">
+				<li class="choices__item"><a class="button button--variant button--simple" href="/downloads/registration-form.pdf">Download Registration Form</a></li>
+				<li class="choices__item"><a class="button button--variant button--simple" href="/downloads/parent-handbook.pdf">Download Parent Handbook</a></li>
+			</ul>
 		</div>
 	</section>
 
