Add images and image gallery with link to full gallery

--- a/index.html
+++ b/index.html
@@ -43,9 +43,18 @@
 		<div class="container">
 			<h1 class="section__title">Our Classes</h1>
 
-			<p class="standout centered">Classes are 5 days a week in the morning from 9–12 AM or afternoon from 12:30–3:30 PM.</p>
+			<p class="flush-bottom"><img class="flush-bottom" src="/images/girls-holding-hands.jpg" alt="Montessori girls holding hands" />
+
+			<p class="centered flush-top standout">Classes are 5 days a week in the morning from 9 am &ndash; 12 pm or afternoon from 12:30 pm &ndash; 3:30 pm.</p>
 
 			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 6 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
+
+			<ul class="gallery">
+				<li class="gallery__item"><img src="/images/boy-with-math.jpg" alt="Boy with math puzzle" /></li>
+				<li class="gallery__item"><img src="/images/girls-reading-book.jpg" alt="Girls reading a book" /></li>
+				<li class="gallery__item"><img src="/images/boy-with-game.jpg" alt="Boy with game" /></li>
+				<li class="gallery__item gallery__item--more"><a class="button button--variant button--simple" href="https://goo.gl/photos/z5PxT7cyXjjVrtaz9"><span>See more images and video</span></a></li>
+			</ul>
 
 			<p>We have a beautiful classroom with several areas. Practical Life, Sensorial, Mathematics, Science, Reading, Art, and Music. <a href="#visit">Contact us</a> to schedule a visit to our classroom. We know that your child will enjoy Light and Truth Montessori Montessori as we prepare them for a lifetime love of learning and exploring.</p>
 
