Added instructor section and new Google Fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 	<title>Light and Truth Montessori</title>
 
+	<link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -33,7 +35,7 @@
 		<div class="container">
 			<h1 class="section__title section__tile--hero">Give your child a love of lifelong learning.</h1>
 
-			<p class="serious">Our early childhood (ages 3 to 6) and lower elementary (ages 6 to 9) classes allow children to learn through <a href="#philosophy">natural and self-motivated exploration</a>.</p>
+			<p class="serious">Our early childhood (ages 3 to 6) and lower elementary (ages 6 to 9) classes allow children to learn through <a href="#philosophy">natural, self-motivated exploration</a>.</p>
 
 			<p class="section__action"><a class="button" href="#visit">Schedule a Visit</a></p>
 		</div>
@@ -43,16 +45,16 @@
 		<div class="container">
 			<h1 class="section__title">Our Classes</h1>
 
-			<p class="flush-bottom"><img class="flush-bottom" src="/images/girls-holding-hands.jpg" alt="Montessori girls holding hands" />
+			<p class="flush-bottom"><img class="section__image flush-bottom" src="/images/girls-holding-hands.jpg" alt="Montessori girls holding hands" />
 
 			<p class="centered flush-top standout">Classes are 5 days a week in the morning from 9 am &ndash; 12 pm or afternoon from 12:30 pm &ndash; 3:30 pm.</p>
 
 			<p>Our class at Light and Truth Montessori consists of a mixed age group 3 to 6 year olds. This grouping enables children to learn from and help each other. Practical life activities such as buttoning, pouring, and washing enable the young child to acquire a wide range of skills necessary in building the child’s self-confidence. The basic readiness skills and concepts necessary for reading, writing, and math are developed in a broadly based program which includes science, outdoor education, movement, social studies and geography.</p>
 
 			<ul class="gallery">
-				<li class="gallery__item"><img src="/images/boy-with-math.jpg" alt="Boy with math puzzle" /></li>
-				<li class="gallery__item"><img src="/images/girls-reading-book.jpg" alt="Girls reading a book" /></li>
-				<li class="gallery__item"><img src="/images/boy-with-game.jpg" alt="Boy with game" /></li>
+				<li class="gallery__item"><img class="section_image" src="/images/boy-with-math.jpg" alt="Boy with math puzzle" /></li>
+				<li class="gallery__item"><img class="section_image" src="/images/girls-reading-book.jpg" alt="Girls reading a book" /></li>
+				<li class="gallery__item"><img class="section_image" src="/images/boy-with-game.jpg" alt="Boy with game" /></li>
 				<li class="gallery__item gallery__item--more"><a class="button button--variant button--simple" href="https://goo.gl/photos/z5PxT7cyXjjVrtaz9"><span>See more images and video</span></a></li>
 			</ul>
 
@@ -72,7 +74,22 @@
 		</div>
 	</section>
 
-	<section id="philosophy" class="section">
+	<section class="section">
+		<div class="container">
+			<h1 class="section__title">Our Instructor</h1>
+
+			<div class="bio">
+				<img class="bio__image" src="images/janessa.jpg" alt="Janessa Rogers, our instructor" />
+
+				<div class="bio__text">
+					<p>Jenessa Rogers has been Montessori trained in both early childhood and lower elementary and has five years of experience teaching in a Montessori classroom. She has also taught small children in China and taught business English to college students in the Philippines. She has a bachelors degree in Statesmanship from George Wythe University. She loves teaching and has been involved in educating children all her life.</p>
+
+					<p>Jenessa has a wonderful husband and two and a half beautiful children. She loves being a wife and mother. She also loves teaching with the Montessori method.</p>
+				</div>
+		</div>
+	</section>
+
+	<section id="philosophy" class="section section--variant">
 		<div class="container">
 			<h1 class="section__title">Why Montessori?</h1>
 			
@@ -89,11 +106,11 @@
 
 			<p>Given the freedom and support to question, to probe deeply, and to make connections, Montessori students become confident, enthusiastic, self-directed learners. They are able to think critically, work collaboratively, and act boldly—a skill set for the 21st century.</p>
 
-			<p class="section__action"><a class="button" href="#visit">Schedule a Visit</a></p>
+			<p class="section__action"><a class="button button--variant" href="#visit">Schedule a Visit</a></p>
 		</div>	
 	</section>
 
-	<section id="visit" class="section section--variant section--centered">
+	<section id="visit" class="section section--centered">
 		<div class="container container--wide">
 			<h1 class="section__title">Schedule a Visit</h1>
 
@@ -105,7 +122,7 @@
 
 			<section class="section__piece section__piece--half">
 				<h2>Email Us</h2>
-				<p><a class="button button--variant" href="https://lightandtruthmontessori.wufoo.com/forms/light-truth-montessori-contact-us/">Send an Email</a></p>
+				<p><a class="button" href="https://lightandtruthmontessori.wufoo.com/forms/light-truth-montessori-contact-us/">Send an Email</a></p>
 				<p>Click the button above to fill out a form and send us an email.</p>
 			</section>
 
