Added another new instructor

--- a/index.html
+++ b/index.html
@@ -76,16 +76,27 @@
 
 	<section class="section">
 		<div class="container">
-			<h1 class="section__title">Our Instructor</h1>
+			<h1 class="section__title">Our Instructors</h1>
 
-			<div class="bio">
-				<img class="bio__image" src="images/janessa.jpg" alt="Janessa Rogers, our instructor" />
+			<div class="bio section__piece section__piece--half">
+				<img class="bio__image" src="images/instructor_janessa.jpg" alt="Janessa Rogers, instructor" />
 
 				<div class="bio__text">
-					<p>Jenessa Rogers has been Montessori trained in both early childhood and lower elementary and has five years of experience teaching in a Montessori classroom. She has also taught small children in China and taught business English to college students in the Philippines. She has a bachelors degree in Statesmanship from George Wythe University. She loves teaching and has been involved in educating children all her life.</p>
+					<p><strong>Jenessa Rogers</strong> has been Montessori trained in both early childhood and lower elementary and has five years of experience teaching in a Montessori classroom. She has also taught small children in China and taught business English to college students in the Philippines. She has a bachelors degree in Statesmanship from George Wythe University. She loves teaching and has been involved in educating children all her life.</p>
 
 					<p>Jenessa has a wonderful husband and two and a half beautiful children. She loves being a wife and mother. She also loves teaching with the Montessori method.</p>
 				</div>
+			</div>
+
+			<div class="bio section__piece section__piece--half">
+				<img class="bio__image" src="images/instructor_saneh.jpg" alt="Saneh Echols, instructor" />
+
+				<div class="bio__text">
+					<p><strong>Saneh Echols</strong> was born in the Fiji islands and educated in many parts of the world. She currently lives in Provo, Utah and is married with three children. She received her B.A. from BYU Hawaii in sociology with an emphasis on early childhood education. She also received the Who's Who award in 2003 for business woman of the year.</p>
+
+					<p>With  20+ years of experience with diversified students, including 10+ years in Montessori education, Saneh has an appreciation and respect for all the cultures and peoples of the world. She looks forward to working with your child and family.</p>
+				</div>
+			</div>
 		</div>
 	</section>
 
